2009-11-13  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDebuggerSession.cs: Track app name handling API.

2009-11-11  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDebuggerSession.cs: Fix launch message.

2009-11-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Debugger.Soft.IPhone.csproj: Fix iphone project
	  ref. Hack around MD pkgconfig parser issue by ref'ing the
	  Mono.Debugger.Soft dll directly.

2009-11-09  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDebuggerSession.cs: Fix ambiguity.

	* MonoDevelop.Debugger.Soft.IPhone.csproj: Move the IPhone
	  soft debugger addin to the IPhone sln.

2009-11-09  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDebuggerSession.cs:
	* IPhoneSoftDebuggerEngine.cs: Moved re-usable listening code
	into the soft debugger addin.

2009-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDebuggerSession.cs: Tweak a few things.

2009-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDebuggerSession.cs: Use Thread.Abort again because
	  socket.Close doesn't interrupt Accept.

2009-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDebuggerSession.cs: Fix closing sockets.

2009-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDebuggerSession.cs: Better error handling with socket
	  errors.

2009-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDebuggerSession.cs: Fix showing listen dialog when app
	  has been uploaded.

2009-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDebuggerSession.cs: Make sure sockets get closed.

2009-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDebuggerSession.cs: Use a marker file to check whether
	  we need to upload.

2009-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneDebuggerSession.cs: First pass at uploading before
	  debugging.

2009-11-03  Michael Hutchinson  <mhutchinson@novell.com>
