@@ -1,3 +1,7 @@
+2009-11-20  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* IPhoneSoftDebuggerEngine.cs: Track API.
+
 2009-11-13  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* IPhoneDebuggerSession.cs: Track app name handling API.
